--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/ui": "^3.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "friendsofphp/php-cs-fixer": "^2.16",
