--- a/package.json
+++ b/package.json
@@ -11,9 +11,19 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "@babel/eslint-parser": "^7.12.1",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/preset-env": "^7.12.11",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "eslint": "^7.17.0",
+        "eslint-config-standard": "^16.0.2",
+        "eslint-loader": "^4.0.2",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-standard": "^5.0.0",
+        "eslint-plugin-vue": "^7.4.1",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
@@ -26,6 +36,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "axios": "^0.19",
         "@fortawesome/fontawesome-free": "^5.15.1",
         "sweetalert2": "^7.29.2"
     }
